<resources>
    <string name="app_name">Costa Rica Cars</string>

    <!--Login Strings -->
    <string name="login_user">Correo</string>
    <string name="login_pass">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="btn_create">Registrarse</string>
    <string name="btn_google">Ingresa con Google</string>
    <string name="error">Error</string>
    <string name="accept">Aceptar</string>
    <string name="forgot_password">Olvido la Contraseña?</string>
    <string name="error_empty_fields">Los Campos de Usuario o Contrasena no puede estar Vacios</string>
    <string name="error_login">Se ha producido un error autentificando al Usuario</string>
    <string name="error_bad_login">Usuario o Contrasena incorrecto</string>

    <!--Forgot Password -->
    <string name="forgot_mail">Correo</string>
    <string name="forgot_btn_reset">Resetear la Contraseña</string>
    <string name="forgot_back">Volver al Inicio</string>
    <string name="forgot_successful">El Email ha sido enviado</string>
    <string name="forgot_error">El Correo es un campo Obligatorio</string>
    <string name="forgot_reset_error">Hubo un Problema al resetar la Contrasena</string>

    <!--Register Strings -->
    <string name="register_name">Nombre</string>
    <string name="register_lastname">Apellido</string>
    <string name="register_mail">Correo</string>
    <string name="register_password">Contraseña</string>
    <string name="register_confirm">Confirmar Contraseña</string>
    <string name="btn_register">Registrarse</string>
    <string name="register_back">Volver al Inicio</string>
    <string name="error_register_empty">El campo  %1$s es obligatorio!</string>
    <string name="error_register_password">Las contraseñas deben de coincidir</string>
    <string name="error_register_password_lent">Las contraseñas debe de ser minimo de 6 caracteres</string>
    <string name="error_register">Hubo un error al crear la cuenta</string>

    <!--Home Menu -->
    <string name="action_settings">Ajustes</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="logout_message">Sesión Cerrada</string>
    <string name="menu_tittle">Costa Rica Cars</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Galery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_maps">Sucursales</string>
    <string name="menu_rent">Rentar </string>
    <string name="menu_my_rent">Mis Reservas </string>
    <string name="menu_contact">Contacto</string>
    <string name="menu_date">Fechas</string>
    <string name="menu_txt_welcome">Bienvenido  </string>
    <string name="menu_txt_welcome2">  a donde vamos Hoy?</string>

    <!--Maps-->
    <string name="menu_pin">Sucursal</string>

    <!--Select Car-->
    <string name="select_car_Tittle">Seleccione el Vehiculo</string>

    <!--Select Date-->
    <string name="select_date_Tittle">Su Vehiculo Seleccionado</string>
    <string name="select_date_Select">Seleccione las Fechas</string>
    <string name="select_date_btn_date">Seleccione las Fechas</string>
    <string name="select_date_btn_back">Volver</string>
    <string name="select_date_btn_next">Siguente</string>
    <string name="date_picker_Tittle">Seleccione las fechas de Reserva</string>
    <string name="date_picker_save">Guardar</string>
    <string name="date_picker_txt_from">Desde</string>
    <string name="date_picker_txt_to">Hasta</string>

    <!--CheckOut-->
    <string name="select_checkout_Tittle">Confirmar su Renta</string>
    <string name="select_date_btn_back_cars">Volver</string>
    <string name="select_date_btn_end">Finalizar</string>
    <string name="select_date_confirm">Reserva Creada</string>


    <!--Card-Info-->
    <string name="card_info_price">Precio Por Dia: $</string>
    <string name="card_info_type">Transmisión: </string>
    <string name="card_info_start_date">Fecha de Inicio: </string>
    <string name="card_info_end_date">Fecha de Fin: </string>
    <string name="card_info_total">Precio Total: $</string>

    <!--My Rent-->
    <string name="my_rent_Tittle">Seleccione una Reserva</string>

    <!--Contacto -->
    <string name="my_contact_Tittle">Contactanos</string>

    <!--Update Rent-->
    <string name="update_Tittle">Informacion de Reserva</string>
    <string name="update_alert">El Vehiculo de la reserva no puede ser modificado</string>
    <string name="update_date_tittle">Fechas de Reserva</string>
    <string name="update_btn_update">Actualizar Reserva</string>
    <string name="update_btn_delete">Eliminar Reserva</string>
    <string name="update_delete_msj">Reserva Eliminada</string>
    <string name="update_update_msj">Reserva Actualizada</string>
    <string name="update_update_btn">Actualizar Fechas</string>
    <string name="update_modal_tittle">Atencion</string>
    <string name="update_modal_msg">Esta Seguro que desea Eliminar esta Reserva</string>
    <string name="update_modal_accept">Aceptar</string>
    <string name="update_modal_cancel">Cancelar</string>


    <!--Default & Others-->
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hola</string>
    <string name="title_activity_locations">LocationsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>