<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/maps"
            android:icon="@drawable/ic_manu_maps"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/select_car"
            android:icon="@drawable/ic_car_rent"
            android:title="@string/menu_rent" />
        <item
            android:id="@+id/my_rent"
            android:icon="@drawable/ic_menu_my_rent"
            android:title="@string/menu_my_rent" />
    </group>
</menu>