<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/bg_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edit_text"
            android:backgroundTint="@color/white"
            android:hint="@string/register_name"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/input_lastname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_edit_text"
            android:backgroundTint="@color/white"
            android:hint="@string/register_lastname"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/input_mail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_edit_text"
            android:backgroundTint="@color/white"
            android:hint="@string/register_mail"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/input_login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_edit_text"
            android:backgroundTint="@color/white"
            android:hint="@string/register_password"
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="30dp"
            />

        <EditText
            android:id="@+id/input_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_edit_text"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/register_confirm"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="30dp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_create"
            android:layout_marginTop="8dp"
            android:textSize="16dp"
            android:backgroundTint="@color/main_green"
            />
        <TextView
            android:id="@+id/txt_register_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_back"
            android:textColor="@color/white"
            android:gravity="end"
            android:textSize="16dp"
            android:layout_margin="8dp"
            />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>