<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@drawable/bg_login"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/reset_mail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edit_text"
            android:backgroundTint="@color/white"
            android:drawablePadding="8dp"
            android:hint="@string/forgot_mail"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="30dp" />

        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/forgot_btn_reset"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/main_green"/>

        <TextView
            android:id="@+id/txt_back_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_back"
            android:textColor="@color/white"
            android:gravity="end"
            android:textSize="16dp"
            android:layout_margin="8dp"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>