<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rent"
    tools:context="ui.rent.UpdateRentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:textSize="30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/update_Tittle" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="30dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">

                <TextView
                    android:id="@+id/car_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imagen"
                    android:layout_width="175dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/car_name"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/car_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    android:paddingLeft="16dp"
                    android:textSize="16dp"
                    android:textColor="@color/main_green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imagen"
                    app:layout_constraintTop_toBottomOf="@+id/car_name" />

                <TextView
                    android:id="@+id/car_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    android:paddingLeft="16dp"
                    android:textSize="16dp"
                    android:textColor="@color/main_green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imagen"
                    app:layout_constraintTop_toBottomOf="@+id/car_price" />

                <TextView
                    android:id="@+id/al"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/update_alert"
                    android:textColor="@color/red"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/imagen"
                    tools:layout_editor_absoluteX="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/update_date_tittle"
            />

        <TextView
            android:id="@+id/input_dates"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edit_text"
            android:backgroundTint="@color/white"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:enabled="false"
            android:textSize="16dp" />
        <Button
            android:id="@+id/btn_update_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/update_update_btn"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="8dp"
            />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/update_btn_update"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/red"
            android:text="@string/update_btn_delete"/>

    </LinearLayout>
</FrameLayout>