<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_select_car"
    tools:context="ui.rent.CheckOutFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:textSize="30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginBottom="0dp"
            android:padding="0dp"
            android:text="@string/select_checkout_Tittle" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/car"
                    android:layout_width="match_parent"
                    android:layout_height="143dp">

                    <TextView
                        android:id="@+id/car_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark_green"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imagen"
                        android:layout_width="175dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/car_name"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />

                    <TextView
                        android:id="@+id/car_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="TextView"
                        android:paddingLeft="16dp"
                        android:textSize="16dp"
                        android:textColor="@color/main_green"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imagen"
                        app:layout_constraintTop_toBottomOf="@+id/car_name" />

                    <TextView
                        android:id="@+id/car_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="TextView"
                        android:paddingLeft="16dp"
                        android:textSize="16dp"
                        android:textColor="@color/main_green"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imagen"
                        app:layout_constraintTop_toBottomOf="@+id/car_price" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/star_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    android:paddingLeft="16dp"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:textColor="@color/main_green" />
                <TextView
                    android:id="@+id/end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    android:paddingLeft="16dp"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:textColor="@color/main_green" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_green" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bnt_back_dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_date_btn_back_cars"
                android:layout_marginEnd="4dp"/>

            <Button
                android:id="@+id/btn_final"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_date_btn_end"
                android:layout_marginStart="4dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>